--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,7 @@
     <title>MyLibrary</title>
   </head>
   <body>
-    before
-    <br />
-    <%- body %>
-    <br />
-    after
+    <%- include("../partials/header.ejs") %> <%-
+    include("../partials/errorMessage.ejs") %> <%- body %>
   </body>
 </html>
