--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -23,7 +23,9 @@
   <label>Page Count</label>
   <input type="number" name="pageCount" min="1" value="<%= book.pageCount%>" />
 </div>
-<div><label>Cover</label> <input type="file" name="cover" /></div>
+<div>
+  <label>Cover</label> <input type="file" name="cover" class="filepond" />
+</div>
 
 <div>
   <label>Description</label>
