--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,4 +1,4 @@
-<h2><%= book.title %></h2>
+<h2 class="page-header"><%= book.title %></h2>
 <img height="150" width="100" src="<%= book.coverImagePath %>" />
 <div>Author: <%= book.author.name %></div>
 <div>Publish Date: <%= book.publishDate.toDateString() %></div>
@@ -7,4 +7,4 @@
 
 <a href="/authors/<%= book.author.id%>">View Author</a>
 <%- include("../partials/deleteForm",{url:`/books/${book.id}`}) %>
-<a href="/books/<%= book.id%>/edit"> Edit</a>
+<a class="btn btn-primary" href="/books/<%= book.id%>/edit"> Edit</a>
