--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -21,7 +21,9 @@
       value="<%= searchOptions.publishedBefore %>"
     />
   </div>
-  <button class="btn btn-primary" type="submit">Search</button>
+  <div class="btn-row">
+    <button class="btn btn-primary" type="submit">Search</button>
+  </div>
 </form>
 
 <br />
