--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,6 +1,8 @@
 <h2 class="page-header"><%= author.name %></h2>
-<a class="btn btn-primary" href="/authors/<%=author.id %>/edit">Edit</a>
-<%- include("../partials/deleteForm",{url:`/authors/${author.id}`}) %> <% if
+<div class="btn-row">
+  <a class="btn btn-primary" href="/authors/<%=author.id %>/edit">Edit</a>
+  <%- include("../partials/deleteForm",{url:`/authors/${author.id}`}) %> <% if
+</div>
 (booksByAuthor.length>0) {%>
 <h2>Books by Author</h2>
 <div>
