--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,9 +1,9 @@
 <h2 class="page-header"><%= author.name %></h2>
 <div class="btn-row">
   <a class="btn btn-primary" href="/authors/<%=author.id %>/edit">Edit</a>
-  <%- include("../partials/deleteForm",{url:`/authors/${author.id}`}) %> <% if
+  <%- include("../partials/deleteForm",{url:`/authors/${author.id}`}) %>
 </div>
-(booksByAuthor.length>0) {%>
+<% if (booksByAuthor.length>0) {%>
 <h2>Books by Author</h2>
 <div>
   <% booksByAuthor.forEach(book => { %>
