--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,10 +1,10 @@
 <h2 class="page-header"><%= author.name %></h2>
-<div class="btn-row">
+<div class="form-row btn-row">
   <a class="btn btn-primary" href="/authors/<%=author.id %>/edit">Edit</a>
   <%- include("../partials/deleteForm",{url:`/authors/${author.id}`}) %>
 </div>
 <% if (booksByAuthor.length>0) {%>
-<h2>Books by Author</h2>
+<h2 class="page-header">Books by Author</h2>
 <div>
   <% booksByAuthor.forEach(book => { %>
   <a href="/books/<%=book.id %>">
