--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,8 +1,8 @@
 <h2 class="page-header">Edit Book</h2>
 <form action="/books/<%=book.id%>?_method=PUT" method="POST">
   <%- include("_form_fields.ejs") %>
-  <div class="btn-row">
-    <a class="btn btn-primary" href="/books">Cancel</a>
+  <div class="form-row btn-row form-row-end">
+    <a class="btn btn-danger" href="/books">Cancel</a>
     <button class="btn btn-primary" type="submit">Update</button>
   </div>
 </form>
