--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,27 +1,31 @@
 <h2 class="page-header">Search Books</h2>
 
 <form action="/books" method="GET">
-  <div>
-    <label>Title</label>
-    <input type="text" name="title" value="<%= searchOptions.title %>" />
+  <div class="form-row">
+    <div class="form-item">
+      <label>Title</label>
+      <input type="text" name="title" value="<%= searchOptions.title %>" />
+    </div>
   </div>
-  <div>
-    <lable>Published After</lable>
-    <input
-      type="date"
-      name="publishedAfter"
-      value="<%= searchOptions.publishedAfter %>"
-    />
+  <div class="form-row">
+    <div class="form-item">
+      <lable>Published After</lable>
+      <input
+        type="date"
+        name="publishedAfter"
+        value="<%= searchOptions.publishedAfter %>"
+      />
+    </div>
+    <div class="form-item">
+      <lable>Published Before</lable>
+      <input
+        type="date"
+        name="publishedBefore"
+        value="<%= searchOptions.publishedBefore %>"
+      />
+    </div>
   </div>
-  <div>
-    <lable>Published Before</lable>
-    <input
-      type="date"
-      name="publishedBefore"
-      value="<%= searchOptions.publishedBefore %>"
-    />
-  </div>
-  <div class="btn-row">
+  <div class="form-row btn-row form-row-end">
     <button class="btn btn-primary" type="submit">Search</button>
   </div>
 </form>
